# Platformer

./: CMakeLists.txt  LICENSE  Makefile  README.md
assets/shaders/: quad.frag  quad.vert
assets/textures/: TextureAtlas.aseprite
src/: CMakeLists.txt  assets.h  config.h  logger.c  logger.h  main.c  pch.h  renderer.c  renderer.h  utils.c  utils.h
src/core/: entities.h  renderer.c  renderer.h
src/gl/: buffers.c  buffers.h  shader.c  shader.h  textures.c  textures.h  vao.c  vao.h
